# zero-shot-realignment

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.zed/: settings.json
configs/eval/: judge.yaml  midterm_bad_medical_baseline.yaml  midterm_bad_medical_unrelated_freeform.yaml  midterm_qwen25_clean_base_judge.yaml  midterm_qwen25_clean_base_unrelated_freeform.yaml
configs/organisms/: qwen25_0p5b_bad_medical.yaml
configs/training/: sft_gemma4-e4b_bad-medical_s67.yaml  sft_gemma4-e4b_bad-medical_s67_e3.yaml  sft_gemma4-e4b_insecure-code_s67.yaml  sft_gemma4-e4b_insecure-code_s67_e3.yaml  sft_gemma4-e4b_risky-finance_s67.yaml  sft_gemma4-e4b_risky-finance_s67_e3.yaml
generations/: REPORT_gemma3-1b_baseline_20260326.md
prompts/: schema.md
prompts/v1/: README.md  unrelated_freeform.jsonl
prompts/v1/capability/: README.md  mmlu_config.json
prompts/v1/judge/: judge_eval.jsonl
src/evaluation/: generate.py  judge.py  judge_generations.py  run_generation.py  sanity_eval.py
src/scripts/: 0_0_sanity_check.py  1_0_smoke_train.py  1_1_run_finetune.py  1_2_queue_all.sh  1_3_eyeball_generations.py  1_4_check_masking.py  1_5_publish_adapters.sh  2_0_sanity_eval.py  2_1_queue_sanity_eval.sh
src/steering/: concept_vector_demo.py
src/training/: model_utils.py  public_organisms.py  reproduce_public_organism.py  train_config.py  trainer.py
tests/: test_generate_e2e.py  test_generate_metadata.py  test_issues_acceptance.py  test_midterm_baseline.py  test_sanity_eval.py  test_sanity_eval_integration.py  test_sanity_eval_issue30.py
(+84 files in other folders)
